--- a/style/ego.css
+++ b/style/ego.css
@@ -1,11 +1,17 @@
 .EgoPortada{
     width: 100%;
     height: auto;
-    margin-top: 10%;
+    position: static;
+    margin-top: 10vh;
+}
+@media screen and (max-width: 600px) {
+    .EgoPortada{
+        margin-top: 10%;
+    }
 }
 
 .EgoPrimerTexto{
-    font-size: 1.9vw;
+    font-size: 1.75em;
     margin-left: auto;
     margin-right: auto;
     margin-top: 9%;
@@ -96,7 +102,7 @@
 }
 
 .TeGustaTexto{
-    font-size: 1.9vw;
+    font-size: 1.75em;
     width: 30%;
     margin-top: 10%;
     margin-left: 5%;
