--- a/style/lectura.css
+++ b/style/lectura.css
@@ -1,19 +1,21 @@
 .PortadaLO{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10vh;
-}
-.PortadaLO img{
     width: 100%;
     height: auto;
+    position: static;
+    margin-top: 10vh;
+}
+@media screen and (max-width: 600px) {
+    .PortadaLO{
+        margin-top: 10%;
+    }
 }
 
-.PortadaLO p{
+.PrimerTextoLO{
     width: 40%;
-    font-size: 2vw;
+    font-size: 1.75em;
     margin-top: 9%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Mockups{
@@ -50,7 +52,7 @@
 
 .TextoLO{
     margin-top: 9%;
-    font-size: 2vw;
+    font-size: 1.75em;
     display: flex;
     flex-direction: column;
     justify-content: center;
