--- a/style/tresrosas.css
+++ b/style/tresrosas.css
@@ -1,11 +1,17 @@
 .PortadaRosasImg{
-    margin-top: 10%;
     width: 100%;
+    height: auto;
+    position: static;
+    margin-top: 10vh;
 }
-
+@media screen and (max-width: 600px) {
+    .PortadaRosasImg{
+        margin-top: 10%;
+    }
+}
 .RosasPrimerTexto{
     width: 52.5%;
-    font-size: 2vw;
+    font-size: 1.75em;
     margin-top: 9%;
     margin-left: auto;
     margin-right: auto;
@@ -57,7 +63,7 @@
 .TextoRosas{
     margin-top: 9%;
     margin-left: 10%;
-    font-size: 2vw;
+    font-size: 1.75em;
     width: 50%;
 }
 @media screen and (max-width : 600px) {
@@ -96,7 +102,7 @@
 .EquipoRosas{
     margin-top: 4%;
     margin-bottom: 5%;
-    font-size: 2vw;
+    font-size: 1.75em;
     display: flex;
     justify-content: center;
     align-items: center;
