--- a/style/tresrosas.css
+++ b/style/tresrosas.css
@@ -101,7 +101,7 @@
 
 .EquipoRosas{
     margin-top: 4%;
-    margin-bottom: 5%;
+    margin-bottom: 5vh;
     font-size: 1.75em;
     display: flex;
     justify-content: center;
