--- a/style/lidia.css
+++ b/style/lidia.css
@@ -102,10 +102,11 @@
     flex-direction: column;
     font-size: 1.75em;
     margin-top: 9%;
-    margin-bottom: 9%;
+    margin-bottom: 20vh;
 }
 @media screen and (max-width: 600px) {
     .LidiaInstagram{
         font-size: larger;
+        margin-bottom: 5vh;
     }
 }
