--- a/style/index.css
+++ b/style/index.css
@@ -119,6 +119,13 @@ a:visited{
   margin-right: auto;
   flex-direction: column;
 }
+@media screen and (max-width: 600px) {
+  .Center{
+    font-size: 6vw;
+
+  }
+}
+
 
 .Center br{
   display: block;
