--- a/style/oasis.css
+++ b/style/oasis.css
@@ -15,7 +15,6 @@
     margin-right: auto;
     width: 55%;
     margin-top: 9%;
-    margin-bottom: 9%;
 }
 
 @media screen and (max-width: 600px) {
@@ -28,6 +27,7 @@
 .PortadaOasis2{
     width: 100%;
     height: auto;
+    margin-top: 9%;
 }
 
 .Superpuestas{
