--- a/style/lidia.css
+++ b/style/lidia.css
@@ -6,7 +6,7 @@
 }
 @media screen and (max-width: 600px) {
     .LidiaPortada{
-        margin-top: 10%;
+        margin-top: 12%;
     }
 }
 
@@ -61,6 +61,7 @@
 @media screen and (max-width: 600px) {
     .LidiaVideo{
         width: 80%;
+        height: auto;
     }
 }
 .Composicion{
