--- a/style/lidia.css
+++ b/style/lidia.css
@@ -104,11 +104,10 @@
     flex-direction: column;
     font-size: 1.75em;
     margin-top: 9%;
-    margin-bottom: 20vh;
+    margin-bottom: 9%;
 }
 @media screen and (max-width: 600px) {
     .LidiaInstagram{
         font-size: larger;
-        margin-bottom: 5vh;
     }
 }
