--- a/style/tresrosas.css
+++ b/style/tresrosas.css
@@ -101,7 +101,7 @@
 
 .EquipoRosas{
     margin-top: 4%;
-    margin-bottom: 5vh;
+    margin-bottom: 4%;
     font-size: 1.75em;
     display: flex;
     justify-content: center;
@@ -112,6 +112,7 @@
 
 @media screen and (max-width : 600px) {
     .EquipoRosas{
+        margin-bottom: 9%;
         font-size: larger;
     }
 }
