--- a/style/index.css
+++ b/style/index.css
@@ -108,9 +108,9 @@ a:visited{
 @media screen and (max-width: 600px) {
   .Information{
     font-size: 5vw;
-    display: flex;
+    width: 100%;
+    display:flex;
     justify-content: center;
-    align-items: center;
   }
 }
 .Center{
@@ -128,7 +128,6 @@ a:visited{
 @media screen and (max-width: 600px) {
   .Center{
     font-size: 6vw;
-
   }
 }
 
