--- a/style/oasis.css
+++ b/style/oasis.css
@@ -4,24 +4,13 @@
     position: static;
     margin-top: 10vh;
 }
-@media screen and (max-width: 600px) {
-    .PortadaOasis{
-        margin-top: 12%;
-    }
-}
+
 .FirstTextOasis{
     margin-left: auto;
     font-size: 1.75em;
     margin-right: auto;
     width: 55%;
     margin-top: 9%;
-}
-
-@media screen and (max-width: 600px) {
-    .FirstTextOasis{
-        font-size: larger;
-        width: 75%;
-    }
 }
 
 .PortadaOasis2{
@@ -45,12 +34,6 @@
     width: 55%;
     height: auto;
 }
-@media screen and (max-width: 600px) {
-    .Superpuestas img{
-        width: 65%;
-        height: auto;
-    }
-}
 
 .GifGuion{
     margin-top: 9%;
@@ -63,15 +46,7 @@
     width: 40%;
     height: auto;
 }
-@media screen and (max-width: 600px) {
-    .GifGuion{
-        flex-direction: column;
-    }
-    .GifGuion video{
-        width: 60%;
-        height: auto;
-    }
-}
+
 
 .GifGuion p{
     margin-left: 5%;
@@ -80,15 +55,7 @@
     width: 28%;
     font-size: 1.75em;
 }
-@media screen and (max-width: 600px) {
-    .GifGuion p{
-        font-size: larger;
-        width: 70%;
-        height: auto;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+
 
 .Carteles{
     margin-top: 9%;
@@ -102,12 +69,6 @@
     display: block;
     padding: 0.5%;
 }
-@media screen and (max-width: 600px) {
-    .Carteles img{
-        width: 45%;
-        height: auto;
-    }
-}
 
 .TextoPlat{
     position: static;
@@ -115,13 +76,6 @@
     width: 55%;
     margin-left: 9%;
     font-size: 1.75em;
-}
-@media screen and (max-width: 600px) {
-    .TextoPlat{
-        font-size: larger;
-        width: 70%;
-        height: auto;
-    }
 }
 
 .TextoPlat br{
@@ -139,12 +93,6 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
-@media screen and (max-width: 600px) {
-    .OasisRevista{
-        width: 100%;
-        height: auto;
-    }
-}
 
 .OasisRevista img{
     width: 35%;
@@ -154,14 +102,7 @@
     padding-bottom: 0.5%;
     padding-right: 0;
 }
-@media screen and (max-width: 600px) {
-    .OasisRevista img{
-        width: 48%;
-        height: auto;
-        padding-right: 1%;
-        padding-top: 2%;
-    }
-}
+
 
 .OasisProducts{
     display: flex;
@@ -178,31 +119,14 @@
     width: 25%;
     padding: 0.5%;
 }
-@media screen and (max-width: 600px) {
-    .OasisProducts img{
-        width: 29%;
-        height: auto;
-        padding: 1%;
-    }
-    .OasisProducts video{
-        width: 29%;
-        height: auto;
-        padding: 1%;
-    }
-}
 
 .OasisFilter{
     margin-top: 9%;
 }
+
 .OasisFilter video{
     width: 40%;
     height: auto;
-}
-@media screen and (max-width: 600px) {
-    .OasisFilter video{
-        width: 60%;
-        height: auto;
-    }
 }
 
 .OasisHab{
@@ -211,21 +135,11 @@
     align-items: flex-end;
     margin-top: -30%;
 }
+
 .OasisHab video{
     width: 40%;
     height: auto;
 }
-
-@media screen and (max-width: 600px) {
-    .OasisHab{
-        margin-top: 9%;
-    }
-    .OasisHab video{
-        width: 60%;
-        height: auto;
-    }
-}
-
 
 .EquipoOasis{
     width: 70%;
@@ -236,13 +150,6 @@
     display: block;
 }
 
-@media screen and (max-width: 600px) {
-    .EquipoOasis{
-        width: 85%;
-        height: auto;
-    }
-}
-
 .TextoEquipoOasis{
     display: flex;
     justify-content: center;
@@ -251,8 +158,83 @@
     margin-top: 4%;
     margin-bottom: 4%;
 }
-@media screen and (max-width: 600px){
+
+@media screen and (max-width: 600px) {
+    .PortadaOasis{
+        margin-top: 12%;
+    }
+    .FirstTextOasis{
+        font-size: larger;
+        width: 75%;
+    }
+    .Superpuestas img{
+        width: 65%;
+        height: auto;
+    }
+    .GifGuion{
+        flex-direction: column;
+    }
+    .GifGuion video{
+        width: 60%;
+        height: auto;
+    }
+    .GifGuion p{
+        font-size: larger;
+        width: 70%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .Carteles img{
+        width: 45%;
+        height: auto;
+        object-fit: contain;
+    }
+    .TextoPlat{
+        font-size: larger;
+        width: 70%;
+        height: auto;
+    }
+    .OasisRevista{
+        width: 100%;
+        height: auto;
+    }
+    .OasisRevista img{
+        width: 48%;
+        height: auto;
+        padding-right: 1%;
+        padding-top: 2%;
+        object-fit: contain;
+    }
+    .OasisProducts img{
+        width: 29%;
+        height: auto;
+        padding: 1%;
+        object-fit: contain;
+    }
+    .OasisProducts video{
+        width: 29%;
+        height: auto;
+        padding: 1%;
+        object-fit: contain;
+    }
+    .OasisFilter video{
+        width: 60%;
+        height: auto;
+    }
+    .OasisHab{
+        margin-top: 9%;
+    }
+    .OasisHab video{
+        width: 60%;
+        height: auto;
+    }
+    .EquipoOasis{
+        width: 85%;
+        height: auto;
+    }
     .TextoEquipoOasis{
         font-size: larger;
     }
+
 }
