--- a/style/index.css
+++ b/style/index.css
@@ -180,6 +180,7 @@ body:not(.mobile) .hover-title:hover + .hover-image {
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   .Center {
     font-size: 6vw;
