--- a/style/lectura.css
+++ b/style/lectura.css
@@ -62,6 +62,7 @@
 .VideoLO {
   margin-top: 9%;
   display: block;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 9%;
