--- a/style/lidia.css
+++ b/style/lidia.css
@@ -46,8 +46,6 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 9%;
-  height: fit-content;
-  display: -webkit-flex;
 }
 
 .LidiaCuad img {
@@ -89,10 +87,15 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .LidiaCuad{
+    width: 100%;
+    height: auto;
+    align-items: flex-start;
+  }
   .LidiaCuad img {
     width: 30vw;
     height: auto;
-    object-fit: contain;
+    /* object-fit: contain; */
   }
   .LidiaInstagram {
     font-size: larger;
