--- a/style/oasis.css
+++ b/style/oasis.css
@@ -185,6 +185,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .Carteles{
+    align-items: flex-start;
+  }
   .Carteles img {
     width: 45%;
     height: auto;
@@ -205,6 +208,9 @@
     padding-right: 1%;
     padding-top: 2%;
     object-fit: contain;
+  }
+  .OasisProducts{
+    align-items: flex-start;
   }
   .OasisProducts img {
     width: 29%;
