--- a/style/lectura.css
+++ b/style/lectura.css
@@ -65,6 +65,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 1px;
   margin-bottom: 9%;
   width: 75%;
   height: 80%;
