--- a/style/lectura.css
+++ b/style/lectura.css
@@ -61,14 +61,17 @@
 
 .VideoLO {
   margin-top: 9%;
-  display: block;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 1px;
   margin-bottom: 9%;
+  width: 100%;
+  height: auto;
+}
+
+.VidLO{
   width: 75%;
   height: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 @media screen and (max-width: 600px) {
@@ -87,7 +90,7 @@
     font-size: x-large;
     width: 60%;
   }
-  .VideoLO {
+  .VidLO {
     width: 100%;
     height: 40%;
   }
