reducing cursor size and adding google analytics

--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  cursor: url("CURSOR_39x39_150ppi.png") 25 25, none;
+  cursor: url("CURSOR_31X31_72ppi.png") 25 25, none;
 }
 
 @font-face {
