--- a/lecturaobligatoria/lectura.css
+++ b/lecturaobligatoria/lectura.css
@@ -60,10 +60,11 @@
 }
 
 .VideoLO {
-  margin-top: 9%;
+  margin-top: 8%;
   width: 100%;
   height: auto;
-  padding-bottom: 4%;
+  margin-bottom: 6%;
+  display: inline-block;
 }
 
 .VidLO {
