--- a/oasis/oasis.css
+++ b/oasis/oasis.css
@@ -151,11 +151,11 @@
 }
 
 .TextoEquipoOasis {
-  display: flex;
-  justify-content: center;
+  display: inline-block;
   text-align: center;
   font-size: 1.75em;
-  margin-top: 4%;
+  width: 100%;
+  margin-top: 6%;
   margin-bottom: 4%;
 }
 
