--- a/tresrosas/tresrosas.css
+++ b/tresrosas/tresrosas.css
@@ -69,14 +69,12 @@
 }
 
 .EquipoRosas {
-  margin-top: 4%;
+  margin-top: 6%;
   margin-bottom: 4%;
   font-size: 1.75em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   text-align: center;
+  display: inline-block;
+  width: 100%;
 }
 
 @media screen and (max-width: 600px) {
@@ -101,7 +99,6 @@
     height: auto;
   }
   .EquipoRosas {
-    margin-bottom: 9%;
     font-size: larger;
   }
 }
