--- a/residus/magrades/magrades.css
+++ b/residus/magrades/magrades.css
@@ -1,7 +1,7 @@
 .MagradesVideo{
-    width: 100%;
-    height: 100%;
     background-color: black;
+    display: block;
+
 }
 
 .LidiaVideo {
@@ -10,5 +10,4 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 9%;
   }
