--- a/residus/magrades/magrades.css
+++ b/residus/magrades/magrades.css
@@ -1,13 +1,5 @@
 .MagradesVideo{
+    width: 100%;
+    height: 100%;
     background-color: black;
-    display: block;
-
 }
-
-.LidiaVideo {
-    width: 55%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
